# sentinel-rag

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
app/: README.md  api_client.py  run_streamlit.bat  run_streamlit.sh  streamlit_app.py  styles.py
app/.streamlit/: config.toml
config/: README.md  config.json
docs/: API_GUIDE.md  COMPLIANCE_GUIDE.md  CONFIGURATION.md  DATABASE_SEPARATION.md  EMBEDDINGS_GUIDE.md  PARENT_DOCUMENT_RETRIEVAL.md  PARENT_DOCUMENT_RETRIEVAL_QUICKSTART.md
examples/: chunk_config.py  migrate_parent_document.py  parent_document_example.py
src/sentinel_rag/: __init__.py  exceptions.py
src/sentinel_rag/api/: app.py  auth_routes.py  dependencies.py  exception_handlers.py  schema.py  schemas.py
src/sentinel_rag/api/routes/: __init__.py  admin.py  auth.py  documents.py  health.py  queries.py  user.py  users.py
src/sentinel_rag/auth/: models.py  oidc.py  tenant_config.py
src/sentinel_rag/config/: __init__.py  config.py  default.json  settings.py
src/sentinel_rag/core/: __init__.py  document_loader.py  document_processor.py  embeddings.py  engine.py  exceptions.py  pii_manager.py  rbac_manager.py  seeder.py
src/sentinel_rag/schemas/: __init__.py
src/sentinel_rag/services/audit/: __init__.py  (+5 more)
test/: cli.py
tests/: cli.py  conftest.py  test_auth.py  test_documents.py  test_embedding.py  test_queries.py  test_user.py  test_utils.py
(+11 files in other folders)
